# ChangeLog for sys-kernel/ccs-sources
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Jan 2010; Naohiro Aota <naota@elisp.net> +ccs-sources-2.6.31-r7.ebuild,
  +ccs-sources-2.6.32-r3.ebuild:
  gentoo-patch version bumped.

  22 Dec 2009; Naohiro Aota <naota@elisp.net> -ccs-sources-2.6.16-r3.ebuild,
  +ccs-sources-2.6.16-r4.ebuild, -ccs-sources-2.6.25-r3.ebuild,
  +ccs-sources-2.6.25-r4.ebuild, -ccs-sources-2.6.26-r3.ebuild,
  +ccs-sources-2.6.26-r4.ebuild, -ccs-sources-2.6.27-r4.ebuild,
  +ccs-sources-2.6.27-r5.ebuild, -ccs-sources-2.6.28-r9.ebuild,
  +ccs-sources-2.6.28-r10.ebuild, -ccs-sources-2.6.29-r10.ebuild,
  +ccs-sources-2.6.29-r11.ebuild, -ccs-sources-2.6.30-r9.ebuild,
  +ccs-sources-2.6.30-r10.ebuild, -ccs-sources-2.6.31-r5.ebuild,
  +ccs-sources-2.6.31-r6.ebuild, -ccs-sources-2.6.32-r1.ebuild,
  +ccs-sources-2.6.32-r2.ebuild:
  ccs-patch, gentoo-patch version bumped.

  07 Dec 2009; Naohiro Aota <naota@elisp.net> -ccs-sources-2.6.16-r2.ebuild,
  +ccs-sources-2.6.16-r3.ebuild, -ccs-sources-2.6.25-r2.ebuild,
  +ccs-sources-2.6.25-r3.ebuild, -ccs-sources-2.6.26-r2.ebuild,
  +ccs-sources-2.6.26-r3.ebuild, -ccs-sources-2.6.27-r3.ebuild,
  +ccs-sources-2.6.27-r4.ebuild, -ccs-sources-2.6.28-r8.ebuild,
  +ccs-sources-2.6.28-r9.ebuild, -ccs-sources-2.6.29-r9.ebuild,
  +ccs-sources-2.6.29-r10.ebuild, -ccs-sources-2.6.30-r8.ebuild,
  +ccs-sources-2.6.30-r9.ebuild, -ccs-sources-2.6.31-r4.ebuild,
  +ccs-sources-2.6.31-r5.ebuild, -ccs-sources-2.6.32.ebuild,
  +ccs-sources-2.6.32-r1.ebuild:
  ccs-patch version bumped.

  05 Dec 2009; Naohiro Aota <naota@elisp.net> +ccs-sources-2.6.32.ebuild:
  Version bumped.

  15 Nov 2009; Naohiro Aota <naota@elisp.net> -ccs-sources-2.6.31-r3.ebuild,
  +ccs-sources-2.6.31-r4.ebuild:
  Version bumped.

  09 Nov 2009; Naohiro Aota <naota@elisp.net> -ccs-sources-2.6.30-r7.ebuild,
  +ccs-sources-2.6.30-r8.ebuild, -ccs-sources-2.6.31-r2.ebuild,
  +ccs-sources-2.6.31-r3.ebuild:
  Version bumped.
