@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  23 Jan 2010; Naohiro Aota <naota@elisp.net> -ccs-sources-2.6.31-r6.ebuild,
+  -ccs-sources-2.6.31-r7.ebuild, +ccs-sources-2.6.31-r8.ebuild,
+  -ccs-sources-2.6.32-r2.ebuild, -ccs-sources-2.6.32-r3.ebuild,
+  +ccs-sources-2.6.32-r4.ebuild:
+  gentoo-patch version bumped.
+
   06 Jan 2010; Naohiro Aota <naota@elisp.net> +ccs-sources-2.6.31-r7.ebuild,
   +ccs-sources-2.6.32-r3.ebuild:
   gentoo-patch version bumped.
